--- a/src/i18n/LoginScreen/nl.json
+++ b/src/i18n/LoginScreen/nl.json
@@ -3,24 +3,36 @@
   "subtitle": "Log in op uw account om door te gaan",
   "email": "E-mailadres",
   "password": "Wachtwoord",
-  "forgotPassword": "Wachtwoord Vergeten?",
+  "forgotPassword": "Wachtwoord vergeten?",
   "loginButton": "Inloggen",
   "or": "OF",
-  "noAccount": "Heeft u geen account?",
-  "registerNow": "Nu Registreren",
-  "success": "Inloggen Geslaagd",
+  "noAccount": "Heb je geen account?",
+  "registerNow": "Registreer Nu",
+  "success": "Inloggen Gelukt",
   "welcomeBack": "Welkom terug!",
   "errors": {
+    "validationFailed": "Validatiefout",
+    "emailInvalidTitle": "Ongeldig E-mailadres",
     "emailInvalid": "Voer een geldig e-mailadres in",
+    "passwordRequiredTitle": "Wachtwoord Vereist",
+    "passwordRequired": "Voer uw wachtwoord in",
     "passwordShort": "Wachtwoord moet minimaal 4 tekens bevatten",
-    "invalidCredentials": "Onjuist e-mailadres of wachtwoord",
-    "accountNotFound": "Geen account gevonden met dit e-mailadres"
-  },
-  "alerts": {
-    "deviceNotAllowed": "Apparaat Niet Toegestaan",
-    "deviceNotAllowedMessage": "Dit account is gekoppeld aan een ander apparaat. Neem contact op met support.",
-    "noConnection": "Geen Internetverbinding",
-    "noConnectionMessage": "Controleer uw internetverbinding en probeer het opnieuw.",
-    "genericErrorMessage": "Er is iets misgegaan. Probeer het later opnieuw."
+    "invalidCredentialsTitle": "Inloggen Mislukt",
+    "invalidCredentials": "Onjuist e-mailadres of wachtwoord. Probeer het opnieuw.",
+    "accountNotFoundTitle": "Account Niet Gevonden",
+    "accountNotFound": "Geen account gevonden met dit e-mailadres",
+    "emailNotVerifiedTitle": "E-mail Niet Geverifieerd",
+    "emailNotVerified": "Verifieer uw e-mailadres voordat u inlogt. Controleer uw inbox voor de verificatielink.",
+    "accountDisabledTitle": "Account Uitgeschakeld",
+    "accountDisabled": "Uw account is uitgeschakeld. Neem contact op met support voor hulp.",
+    "deviceNotAllowedTitle": "Apparaat Niet Toegestaan",
+    "deviceNotAllowed": "Dit account is gekoppeld aan een ander apparaat. Neem contact op met support om uw account over te zetten.",
+    "tokenFailedTitle": "Inlogfout",
+    "tokenFailed": "Kan inloggen niet voltooien. Probeer het opnieuw.",
+    "noConnectionTitle": "Geen Internetverbinding",
+    "noConnection": "Controleer uw internetverbinding en probeer het opnieuw.",
+    "genericErrorTitle": "Fout",
+    "genericError": "Er is iets misgegaan. Probeer het later opnieuw.",
+    "forgotPasswordComingSoon": "Wachtwoord vergeten functie komt binnenkort. Neem contact op met support."
   }
 }
